--- a/Code/Juypter Notebooks/Glycowork/Glycowork_Pred.ipynb
+++ b/Code/Juypter Notebooks/Glycowork/Glycowork_Pred.ipynb
@@ -43,24 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found existing installation: torch-scatter 2.0.9\n",
-      "Uninstalling torch-scatter-2.0.9:\n",
-      "  Successfully uninstalled torch-scatter-2.0.9\n",
-      "Found existing installation: torch-sparse 0.6.15\n",
-      "Uninstalling torch-sparse-0.6.15:\n",
-      "  Successfully uninstalled torch-sparse-0.6.15\n",
-      "Found existing installation: torch-cluster 1.6.0\n",
-      "Uninstalling torch-cluster-1.6.0:\n",
-      "  Successfully uninstalled torch-cluster-1.6.0\n",
-      "Found existing installation: torch-spline-conv 1.2.1\n",
-      "Uninstalling torch-spline-conv-1.2.1:\n",
-      "  Successfully uninstalled torch-spline-conv-1.2.1\n",
-      "Found existing installation: torch-geometric 2.1.0.post1\n",
-      "Uninstalling torch-geometric-2.1.0.post1:\n",
-      "  Successfully uninstalled torch-geometric-2.1.0.post1\n",
-      "Found existing installation: glycowork 0.5.0\n",
-      "Uninstalling glycowork-0.5.0:\n",
-      "  Successfully uninstalled glycowork-0.5.0\n"
+      
      ]
     }
    ],
@@ -84,85 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in links: https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-      "Collecting torch-scatter\n",
-      "  Using cached https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_scatter-2.0.9-cp37-cp37m-linux_x86_64.whl (8.0 MB)\n",
-      "Installing collected packages: torch-scatter\n",
-      "Successfully installed torch-scatter-2.0.9\n",
-      "Looking in links: https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-      "Collecting torch-sparse\n",
-      "  Downloading https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_sparse-0.6.15-cp37-cp37m-linux_x86_64.whl (2.9 MB)\n",
-      "     |████████████████████████████████| 2.9 MB 4.6 MB/s            \n",
-      "\u001b[?25hRequirement already satisfied: scipy in /opt/conda/lib/python3.7/site-packages (from torch-sparse) (1.7.3)\n",
-      "Requirement already satisfied: numpy<1.23.0,>=1.16.5 in /opt/conda/lib/python3.7/site-packages (from scipy->torch-sparse) (1.21.5)\n",
-      "Installing collected packages: torch-sparse\n",
-      "Successfully installed torch-sparse-0.6.15\n",
-      "Looking in links: https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-      "Collecting torch-cluster\n",
-      "  Using cached https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_cluster-1.6.0-cp37-cp37m-linux_x86_64.whl (1.4 MB)\n",
-      "Installing collected packages: torch-cluster\n",
-      "Successfully installed torch-cluster-1.6.0\n",
-      "Looking in links: https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-      "Collecting torch-spline-conv\n",
-      "  Using cached https://data.pyg.org/whl/torch-1.12.0%2Bcu102/torch_spline_conv-1.2.1-cp37-cp37m-linux_x86_64.whl (633 kB)\n",
-      "Installing collected packages: torch-spline-conv\n",
-      "Successfully installed torch-spline-conv-1.2.1\n",
-      "Looking in links: https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-      "Collecting torch-geometric\n",
-      "  Using cached torch_geometric-2.1.0.post1-py3-none-any.whl\n",
-      "Requirement already satisfied: requests in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (2.27.1)\n",
-      "Requirement already satisfied: tqdm in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (4.62.3)\n",
-      "Requirement already satisfied: scipy in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (1.7.3)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (3.0.3)\n",
-      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (1.0.1)\n",
-      "Requirement already satisfied: pyparsing in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (3.0.6)\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from torch-geometric) (1.21.5)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.7/site-packages (from jinja2->torch-geometric) (2.0.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests->torch-geometric) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.7/site-packages (from requests->torch-geometric) (2.0.11)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests->torch-geometric) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests->torch-geometric) (1.26.8)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn->torch-geometric) (3.0.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from scikit-learn->torch-geometric) (1.1.0)\n",
-      "Installing collected packages: torch-geometric\n",
-      "Successfully installed torch-geometric-2.1.0.post1\n",
-      "Collecting glycowork\n",
-      "  Using cached glycowork-0.5.0-py3-none-any.whl (185.8 MB)\n",
-      "Requirement already satisfied: scipy in /opt/conda/lib/python3.7/site-packages (from glycowork) (1.7.3)\n",
-      "Requirement already satisfied: xgboost in /home/jupyter/.local/lib/python3.7/site-packages (from glycowork) (1.6.1)\n",
-      "Requirement already satisfied: networkx in /opt/conda/lib/python3.7/site-packages (from glycowork) (2.6.3)\n",
-      "Requirement already satisfied: requests in /opt/conda/lib/python3.7/site-packages (from glycowork) (2.27.1)\n",
-      "Requirement already satisfied: statsmodels in /opt/conda/lib/python3.7/site-packages (from glycowork) (0.13.1)\n",
-      "Requirement already satisfied: sklearn in /home/jupyter/.local/lib/python3.7/site-packages (from glycowork) (0.0)\n",
-      "Requirement already satisfied: seaborn in /opt/conda/lib/python3.7/site-packages (from glycowork) (0.11.2)\n",
-      "Requirement already satisfied: mpld3 in /home/jupyter/.local/lib/python3.7/site-packages (from glycowork) (0.5.8)\n",
-      "Requirement already satisfied: pandas in /opt/conda/lib/python3.7/site-packages (from glycowork) (1.3.5)\n",
-      "Requirement already satisfied: regex in /home/jupyter/.local/lib/python3.7/site-packages (from glycowork) (2022.7.25)\n",
-      "Requirement already satisfied: torch in /home/jupyter/.local/lib/python3.7/site-packages (from glycowork) (1.12.1)\n",
-      "Requirement already satisfied: matplotlib in /opt/conda/lib/python3.7/site-packages (from mpld3->glycowork) (3.5.1)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/lib/python3.7/site-packages (from mpld3->glycowork) (3.0.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas->glycowork) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas->glycowork) (2021.3)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.7/site-packages (from pandas->glycowork) (1.21.5)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /opt/conda/lib/python3.7/site-packages (from requests->glycowork) (2.0.11)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.7/site-packages (from requests->glycowork) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.7/site-packages (from requests->glycowork) (1.26.8)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.7/site-packages (from requests->glycowork) (3.3)\n",
-      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.7/site-packages (from sklearn->glycowork) (1.0.1)\n",
-      "Requirement already satisfied: patsy>=0.5.2 in /opt/conda/lib/python3.7/site-packages (from statsmodels->glycowork) (0.5.2)\n",
-      "Requirement already satisfied: typing-extensions in /opt/conda/lib/python3.7/site-packages (from torch->glycowork) (4.0.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (1.3.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (21.3)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (4.28.5)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (9.0.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /opt/conda/lib/python3.7/site-packages (from matplotlib->mpld3->glycowork) (3.0.6)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.7/site-packages (from patsy>=0.5.2->statsmodels->glycowork) (1.16.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/lib/python3.7/site-packages (from jinja2->mpld3->glycowork) (2.0.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from scikit-learn->sklearn->glycowork) (1.1.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn->sklearn->glycowork) (3.0.0)\n",
-      "Installing collected packages: glycowork\n",
-      "Successfully installed glycowork-0.5.0\n"
+    
      ]
     }
    ],
@@ -186,7 +91,7 @@
     "import glycowork\n",
     "#export\n",
     "from glycowork.ml.model_training import *\n",
-    "from glycowork.ml.models import *\n",
+    "#from glycowork.ml.models import *\n",
     "from glycowork.ml.processing import *\n",
     "from glycowork.ml.inference import *\n",
     "from glycowork.ml.train_test_split import *\n",
