HPC compatible scripts

--- a/Code/Juypter Notebooks/Glycowork/Glycowork_Pred.ipynb
+++ b/Code/Juypter Notebooks/Glycowork/Glycowork_Pred.ipynb
@@ -51,7 +51,7 @@
     "!pip uninstall torch-scatter --yes \n",
     "!pip uninstall torch-sparse --yes\n",
     "!pip uninstall torch-cluster --yes\n",
-    "!pip uninstall torch-spline-conv --yes\n",
+    "#!pip uninstall torch-spline-conv --yes\n",
     "!pip uninstall torch-geometric --yes\n",
     "!pip uninstall glycowork --y"
    ]
