--- a/Code/Juypter Notebooks/HPC_Glycowork_Pred.ipynb
+++ b/Code/Juypter Notebooks/HPC_Glycowork_Pred.ipynb
@@ -48,12 +48,12 @@
     }
    ],
    "source": [
-    "!pip uninstall torch-scatter --yes \n",
-    "!pip uninstall torch-sparse --yes\n",
-    "!pip uninstall torch-cluster --yes\n",
+    "pip uninstall torch-scatter --yes \n",
+    "pip uninstall torch-sparse --yes\n",
+    "pip uninstall torch-cluster --yes\n",
     "#!pip uninstall torch-spline-conv --yes\n",
-    "!pip uninstall torch-geometric --yes\n",
-    "!pip uninstall glycowork --y"
+    "pip uninstall torch-geometric --yes\n",
+    "pip uninstall glycowork --y"
    ]
   },
   {
@@ -72,12 +72,12 @@
     }
    ],
    "source": [
-    "!pip install torch-scatter -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-    "!pip install torch-sparse --no-cache-dir -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-    "!pip install torch-cluster -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-    "!pip install torch-spline-conv -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-    "!pip install torch-geometric -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
-    "!pip install glycowork"
+    "pip install torch-scatter -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
+    "pip install torch-sparse --no-cache-dir -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
+    "pip install torch-cluster -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
+    "pip install torch-spline-conv -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
+    "pip install torch-geometric -f https://data.pyg.org/whl/torch-1.12.0+cu102.html\n",
+    "pip install glycowork"
    ]
   },
   {
